# mtdev

./: Android.mk  configure.ac  mtdev-uninstalled.pc.in
src/: Makefile.am
